<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/white">

    <!--region Header-->
    <TextView
        android:id="@+id/judul"
        android:layout_width="231dp"
        android:layout_height="35dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:text="WartaTerkini"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--endregion-->

    <!--region Menu Top-->
    <LinearLayout
        android:id="@+id/lay_MenuTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/judul">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_terbaru"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_beritautama"
            android:textColor="@color/dark_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_antarkansemangat"
            android:textColor="@color/dark_blue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:text="@string/menu_mostpopular"
            android:textColor="@color/dark_blue" />

    </LinearLayout>
    <!--endregion-->

    <!--region news-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf ="parent"
        app:layout_constraintTop_toBottomOf ="@id/lay_MenuTop">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cdv_newsheadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_news0"
                    android:layout_width="439dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/var_contdesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gambar1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="vertical"
                    android:layout_gravity="bottom"
                    android:background="#6A7F9A"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvw_TitleHeadLine"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/var_contdesc"
                        android:text="@string/judul_headline"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvw_DescHeadline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/var_contdesc"
                        android:text="@string/deskripsi_headline"
                        android:textColor="#EDEDED"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <!--endregion-->


            /'<androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_daftarberita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="140dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cdv_newsheadline"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/lay_berita" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <!--endregion-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv_menubottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6A7F9A"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom"/>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="30dp"
        android:layout_height="29dp"
        app:layout_constraintBottom_toTopOf="@+id/lay_MenuTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toEndOf="@+id/judul"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571"
        app:srcCompat="@drawable/ic_search"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
