<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardBackgroundColor="@color/dark_grey"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvw_ImgNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_news"
                    android:layout_width="120dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/var_contdesc"
                    android:scaleType="centerCrop"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    app:srcCompat="@drawable/gambar2" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvw_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="monospace"
                android:text="@string/judul_headline"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/cvw_ImgNews"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvw_Desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:textColor="@color/white"
                android:text="@string/deskripsi_headline"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/cvw_ImgNews"
                app:layout_constraintTop_toBottomOf="@id/tvw_title" />

            <ImageView
                android:id="@+id/img_star"
                android:layout_width="18dp"
                android:layout_height="25dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/var_contdesc"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/saved" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>

